@@ -94,6 +94,21 @@ class SafeChargeTest < Test::Unit::TestCase
     assert purchase.test?
   end
 
+  def test_successful_purchase_with_card_holder_verification
+    purchase = stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options.merge(middle_name: 'middle', card_holder_verification: 1))
+    end.check_request do |_endpoint, data, _headers|
+      assert_match(/sg_middleName=middle/, data)
+      assert_match(/sg_doCardHolderNameVerification=1/, data)
+    end.respond_with(successful_purchase_response)
+
+    assert_success purchase
+    assert_equal '111951|101508189567|ZQBpAFAASABGAHAAVgBPAFUAMABiADMAewBtAGsAd' \
+                 'AAvAFIAQQBrAGoAYwBxACoAXABHAEEAOgA3ACsAMgA4AD0AOABDAG4AbQAzAF' \
+                 'UAbQBYAFIAMwA=|%02d|%d|1.00|USD' % [@credit_card.month, @credit_card.year.to_s[-2..-1]], purchase.authorization
+    assert purchase.test?
+  end
+
   def test_successful_purchase_with_falsey_stored_credential_mode
     purchase = stub_comms do
       @gateway.purchase(@amount, @credit_card, @options.merge(stored_credential_mode: false))
